download maps button when no maps

--- a/assets/jsons/translations/en.json
+++ b/assets/jsons/translations/en.json
@@ -38,6 +38,10 @@
                                     "unlink": "Unling maps"
                                 }
                             }
+                        },
+                        "empty-maps":{
+                            "text":"No maps",
+                            "button":"Download maps"
                         }
                     }
                 }
