add discord button in settings

--- a/assets/jsons/translations/en.json
+++ b/assets/jsons/translations/en.json
@@ -134,6 +134,9 @@
                     "supporters": "Supporters"
                 }
             },
+            "discord": {
+                "description": "Join the BSManager community by joining our Discord!"
+            },
             "contribution": {
                 "description": "Suggest new features or report a bug to help improve BSManager!",
                 "buttons": {
