add notification to enable OneClicks if not

--- a/assets/jsons/translations/en.json
+++ b/assets/jsons/translations/en.json
@@ -252,6 +252,14 @@
                         "error":{
                             "description":"An unknown error occurred."
                         }
+                    },
+                    "check-all-enabled":{
+                        "title": "OneClick Disabled",
+                        "description": "One or more OneClick installations are disabled. Go to settings to enable them.",
+                        "actions":{
+                            "settings": "Settings",
+                            "not-remind": "Do not remind me"
+                        }
                     }
                 }
             }
