--- a/assets/jsons/translations/fr.json
+++ b/assets/jsons/translations/fr.json
@@ -187,6 +187,9 @@
                 }
             },
             "errors": {
+                "titles":{
+                    "dotnet-required": ".NET 6 Requis"
+                },
                 "msg": {
                     "401": "Steam semble pas vouloir nous laisser télécharger BeatSaber 😢",
                     "404": "Impossible de contacter les serveurs de Steam.",
@@ -211,7 +214,11 @@
                     "verification-failed": "La vérification a échoué, réessaye plus tard.",
                     "RateLimitExceeded": "Tu as essayé trop de fois attend un peu et recommence plus tard.",
                     "AlreadyDownloading": "Un téléchargement est déjà en cours",
-                    "no-internet": "Pas de connexion internet."
+                    "no-internet": "Pas de connexion internet.",
+                    "dotnet-required": ".NET 6 Runtime doit être installé pour pouvoir télécharger une version de BeatSaber. Télécharge-le en cliquant sur le bouton ci-dessous."
+                },
+                "actions":{
+                    "download-dotnet": "Télécharger .NET 6"
                 }
             }
         },
