add remember choice option on delete single map

--- a/assets/jsons/translations/en.json
+++ b/assets/jsons/translations/en.json
@@ -381,6 +381,9 @@
         }
     },
     "modals": {
+        "misc":{
+            "remember-my-choice": "Remember my choice"
+        },
         "guard": {
             "title": "Steam Guard",
             "inputs": {
