add select all to toogle oneClicks

--- a/assets/jsons/translations/en.json
+++ b/assets/jsons/translations/en.json
@@ -245,6 +245,7 @@
             },
             "additional-content":{
                 "deep-link": {
+                    "select-all": "Select all",
                     "activation":{
                         "success":{
                             "title":"OneClick activated!",
