--- a/assets/jsons/translations/es.json
+++ b/assets/jsons/translations/es.json
@@ -245,6 +245,7 @@
             },
             "additional-content":{
                 "deep-link": {
+                    "select-all": "Seleccionar todo",
                     "activation":{
                         "success":{
                             "title":"¡OneClick activado!",
