--- a/assets/jsons/translations/fr.json
+++ b/assets/jsons/translations/fr.json
@@ -245,6 +245,7 @@
             },
             "additional-content":{
                 "deep-link": {
+                    "select-all": "Tout sélectionner",
                     "activation":{
                         "success":{
                             "title":"OneClick activé !",
