add twitter button

--- a/assets/jsons/translations/en.json
+++ b/assets/jsons/translations/en.json
@@ -138,7 +138,7 @@
                 }
             },
             "discord": {
-                "description": "Join the BSManager community by joining our Discord!"
+                "description": "Join the BSManager community by following us on our social media!"
             },
             "contribution": {
                 "description": "Suggest new features or report a bug to help improve BSManager!",
