--- a/assets/jsons/translations/es.json
+++ b/assets/jsons/translations/es.json
@@ -138,7 +138,7 @@
                 }
             },
             "discord": {
-                "description": "¡Únete a la comunidad de BSManager uniéndote a nuestro Discord!"
+                "description": "¡Únete a la comunidad de BSManager siguiéndonos en nuestras redes sociales!"
             },
             "contribution": {
                 "description": "¡Sugiera nuevas características o reporte un error para ayudar a mejorar BSManager!",
