--- a/assets/jsons/translations/fr.json
+++ b/assets/jsons/translations/fr.json
@@ -138,7 +138,7 @@
                 }
             },
             "discord":{
-                "description": "Prends part à la communauté de BSManager en rejoignant notre Discord !"
+                "description": "Prends part à la communauté de BSManager en nous suivant sur nos réseaux sociaux !"
             },
             "contribution": {
                 "description": "Propose de nouvelles fonctionnalités ou signale un bug pour contribuer à l'amélioration de BSManager !",
